--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input id="color1" type="color" value="#00ff00"> 
         <input id="color2" type="color" value="#ff0000">
     </div>
+    <h2>This is the CSS code</h2>
     <h3></h3>
     <script src="script/script.js"></script>
 </body>
